# AST-alook

./: package.json  readme.md  test.js
Antlr4-compiler/.antlr/: Hello.interp
Antlr4-compiler/Hello/: Hello.g4
Antlr4-compiler/Hello/antlr4-runtime/: HelloBaseListener.cpp  HelloBaseListener.h  (+10 more)
Antlr4-compiler/Hello/antlr4-runtime-java/: Hello.tokens  HelloBaseListener.java  HelloLexer.interp  HelloLexer.java  HelloListener.java  HelloParser.java
Antlr4-compiler/Number/: CMakeLists.txt  Makefile  MyVisitor.h  calculation.expr  calculation.g4  calculationLexer.d  calculationParser.d  log.txt  main.cpp  main.d  numbers.g4  output.txt  test.sh
Antlr4-compiler/Number/.antlr/: calculation.interp
Antlr4-compiler/Number/antlr4-runtime/: Makefile  calculation.tokens  calculationBaseListener.cpp  calculationBaseListener.h  calculationBaseVisitor.cpp  calculationBaseVisitor.h  calculationLexer.cpp  calculationLexer.h  calculationListener.cpp  calculationListener.h  calculationParser.cpp  calculationParser.h  calculationVisitor.cpp  calculationVisitor.h  numbers.cpp  numbers.h  numbers.tokens
Antlr4-compiler/Number/antlr4-runtime-java/: calculation.interp  calculationBaseListener.java  calculationLexer.interp  calculationLexer.java  calculationLexer.tokens  calculationListener.java  calculationParser.java
Antlr4-compiler/Number/output/: calc
Esprima/: package-lock.json
Sourcery/: Sourcery.swift  dicconvertable.generated.swift  dicconvertable.stencil  dicconvertable.swift  enumset.generated.swift  enumset.stencil  log.txt
jsx-gen/: index.html
jsx-gen/babel/: main.js
jsx-gen/css/: style.css
jsx-gen/less/: style.less
jsx/babel/: index.js  main.js
macro/lib/: async.ex  returning.ex  task.ex
macro/test/: macro_test_test.exs
macro_test/: .gitignore  mix.exs
macro_test/config/: config.exs
macro_test/lib/: macro_test.ex  myif.ex
